# XIDS

./: README.md  pyproject.toml
src/tp1/: main.py
src/tp1/utils/: branding.py  capture.py  config.py  lib.py  report.py
tests/tp1/utils/: test_capture.py  test_lib.py  test_report.py
